--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="%PUBLIC_URL%/logoiris.JPG"
+      href="logoiris.JPG"
     />
     <link
       rel="stylesheet"
